Рабочая сборка проекта, каталог 2, каталог 3

--- a/fineroof/app/products2.html
+++ b/fineroof/app/products2.html
@@ -151,7 +151,7 @@
 		}
 	</script>
 	<main class="main">
-		<h1 class="visually-hidden">Продукция</h1>
+		<h1 class="visually-hidden">Услуги</h1>
 		<div class="inner-title">
 			<div class="container">
 				<div class="inner-title__wrap inner-title__wrap_no-border inner-title__wrap_catalog-page">
@@ -180,24 +180,24 @@
 								<div class="catalog-list__name">Фасадные материалы</div>
 							</div>
 							<ul class="catalog-list__list">
-								<li class="catalog-list__item">
+								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>
 									Фасадные панели
-								</li>
-								<li class="catalog-list__item">
+								</a></li>
+								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>
 									Виниловый сайдинг
-								</li>
-								<li class="catalog-list__item">
+								</a></li>
+								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>
 									Металлический сайдинг
-								</li>
-								<li class="catalog-list__item">
+								</a></li>
+								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>
 									Сайдинг дпк
-								</li>
-								<li class="catalog-list__item">
+								</a></li>
+								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>
 									Фиброцементный сайдинг cedral
-								</li>
-								<li class="catalog-list__item">
+								</a></li>
+								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>
 									Комплектующие
-								</li>
+								</a></li>
 							</ul>
 						</div>
 
@@ -217,11 +217,11 @@
 								<div class="catalog-list__name">Скатные кровли</div>
 							</div>
 							<ul class="catalog-list__list">
-								<li class="catalog-list__item">Гибкая черепица Docke Pie</li>
-								<li class="catalog-list__item">Гибкая черепица Технониколь Shinglas</li>
-								<li class="catalog-list__item">Металлочерепица</li>
-								<li class="catalog-list__item">Кровельный профнастил</li>
-								<li class="catalog-list__item">Комплектующие</li>
+								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>Гибкая черепица Docke Pie</a></li>
+								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>Гибкая черепица Технониколь Shinglas</a></li>
+								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>Металлочерепица</a></li>
+								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>Кровельный профнастил</a></li>
+								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>Комплектующие</a></li>
 							</ul>
 						</div>
 						<div class="catalog-list__block">
@@ -239,188 +239,13 @@
 								<div class="catalog-list__name">Изоляционные материалы</div>
 							</div>
 							<ul class="catalog-list__list">
-								<li class="catalog-list__item">Гидро- и пароизоляция</li>
-								<li class="catalog-list__item">	Утеплитель стекловолоконный</li>
-								<li class="catalog-list__item">Утеплитель базальтовый</li>
-								<li class="catalog-list__item">Комплектующие</li>
+								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>Гидро- и пароизоляция</a></li>
+								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>	Утеплитель стекловолоконный</a></li>
+								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>Утеплитель базальтовый</a></li>
+								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>Комплектующие</a></li>
 							</ul>
 						</div>
 					</div>
-
-					<div class="catalog-list__detail catalog-section isActive">
-							<div class="catalog-section__top">
-								<div class="container-inner">
-									<div class="catalog-section__wrapper">
-										<div class="catalog-section__title inner-subtitle">
-											Фасадные панели
-										</div>
-										<div class="catalog-section__brand">
-											<div class="catalog-section__supwrap">
-												<div class="catalog-section__select brand-select">
-													<div class="brand-select__left">
-														<div class="brand-select__position">
-															Docke-R
-														</div>
-														<div class="brand-select__position">
-															Shinglas
-														</div>
-														<div class="brand-select__position">
-															Docke-R
-														</div>
-													</div>
-													<div class="brand-select__right"></div>
-												</div>
-											</div>
-											<div class="catalog-section__additional">
-												Выберите производителя
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="catalog-section__desc">
-								<div class="container-inner container-inner_min">
-									<p>Полимерные фасадные панели Docke-R – инновационный материал для отделки внешних стен Вашего дома, в производствекоторого используются новейшие разработки немецких специалистов. Панели устойчивы к воздействию любых погодныхусловий и не требуют для сохранения внешнего вида ни покраски, ни особого ухода. </p>
-									<p>Большой выбор оттенков и имитация таких дорогостоящих и натуральных материалов, как камень, кирпич, плитка, песчаник,даёт широкие возможности для творчества при создании внешнего облика здания.</p>
-								</div>
-							</div>
-							<div class="catalog-section__list">
-								<div class="container-inner container-inner_medium">
-									<div class="catalog-section__wrapper catalog-section__wrapper_items">
-										<div class="catalog-section__item card-item">
-											<div class="card-item__top bordered-item">
-												<div class="card-item__variables">
-													12 цветовых решений
-												</div>
-												<div class="card-item__image">
-													<img src="/template/img/card1.jpg" alt="">
-												</div>
-												<div class="card-item__brand">
-													Burg
-												</div>
-												<div class="card-item__type">
-													Замок
-												</div>
-												<div class="card-item__desc">
-													Сила, изящество, монументальность
-												</div>
-											</div>
-											<div class="card-item__button classic-button classic-button_green">От 359 ₽ – ШТ.</div>
-											<a href="#"></a>
-										</div>
-										<div class="catalog-section__item card-item">
-											<div class="card-item__top bordered-item">
-												<div class="card-item__variables">
-													12 цветовых решений
-												</div>
-												<div class="card-item__image">
-													<img src="/template/img/card1.jpg" alt="">
-												</div>
-												<div class="card-item__brand">
-													Burg
-												</div>
-												<div class="card-item__type">
-													Замок
-												</div>
-												<div class="card-item__desc">
-													Сила, изящество, монументальность
-												</div>
-											</div>
-											<div class="card-item__button classic-button classic-button_green">От 359 ₽ – ШТ.</div>
-											<a href="#"></a>
-										</div>
-										<div class="catalog-section__item card-item">
-											<div class="card-item__top bordered-item">
-												<div class="card-item__variables">
-													12 цветовых решений
-												</div>
-												<div class="card-item__image">
-													<img src="/template/img/card1.jpg" alt="">
-												</div>
-												<div class="card-item__brand">
-													Burg
-												</div>
-												<div class="card-item__type">
-													Замок
-												</div>
-												<div class="card-item__desc">
-													Сила, изящество, монументальность
-												</div>
-											</div>
-											<div class="card-item__button classic-button classic-button_green">От 359 ₽ – ШТ.</div>
-											<a href="#"></a>
-										</div>
-										<div class="catalog-section__item card-item">
-											<div class="card-item__top bordered-item">
-												<div class="card-item__variables">
-													12 цветовых решений
-												</div>
-												<div class="card-item__image">
-													<img src="/template/img/card1.jpg" alt="">
-												</div>
-												<div class="card-item__brand">
-													Burg
-												</div>
-												<div class="card-item__type">
-													Замок
-												</div>
-												<div class="card-item__desc">
-													Сила, изящество, монументальность
-												</div>
-											</div>
-											<div class="card-item__button classic-button classic-button_green">От 359 ₽ – ШТ.</div>
-											<a href="#"></a>
-										</div>
-										<div class="catalog-section__item card-item">
-											<div class="card-item__top bordered-item">
-												<div class="card-item__variables">
-													12 цветовых решений
-												</div>
-												<div class="card-item__image">
-													<img src="/template/img/card1.jpg" alt="">
-												</div>
-												<div class="card-item__brand">
-													Burg
-												</div>
-												<div class="card-item__type">
-													Замок
-												</div>
-												<div class="card-item__desc">
-													Сила, изящество, монументальность
-												</div>
-											</div>
-											<div class="card-item__button classic-button classic-button_green">От 359 ₽ – ШТ.</div>
-											<a href="#"></a>
-										</div>
-										<div class="catalog-section__item card-item">
-											<div class="card-item__top bordered-item">
-												<div class="card-item__variables">
-													12 цветовых решений
-												</div>
-												<div class="card-item__image">
-													<img src="/template/img/card1.jpg" alt="">
-												</div>
-												<div class="card-item__brand">
-													Burg
-												</div>
-												<div class="card-item__type">
-													Замок
-												</div>
-												<div class="card-item__desc">
-													Сила, изящество, монументальность
-												</div>
-											</div>
-											<div class="card-item__button classic-button classic-button_green">От 359 ₽ – ШТ.</div>
-											<a href="#"></a>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="catalog-section__pagination">
-								Показать следующего производителя «<span class="catalog-section__next">Smart Home</span>»
-							</div>
-					</div>
-
 					<div class="catalog-list__row">
 						<div class="catalog-list__block">
 							<div class="catalog-list__status">
@@ -439,10 +264,10 @@
 								</div>
 							</div>
 							<ul class="catalog-list__list">
-								<li class="catalog-list__item">	Пластиковая система Docke Lux</li>
-								<li class="catalog-list__item">Пластиковая система Docke Standart</li>
-								<li class="catalog-list__item">Металлическая система 125х90</li>
-								<li class="catalog-list__item">Комплектующие</li>
+								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>	Пластиковая система Docke Lux</a></li>
+								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>Пластиковая система Docke Standart</a></li>
+								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>Металлическая система 125х90</a></li>
+								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>Комплектующие</a></li>
 							</ul>
 						</div>
 						<div class="catalog-list__block">
@@ -460,8 +285,8 @@
 								<div class="catalog-list__name">Мансардные окна</div>
 							</div>
 							<ul class="catalog-list__list">
-								<li class="catalog-list__item">Мансардные окна на любой вкус</li>
-								<li class="catalog-list__item">Комплектуюшие</li>
+								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>Мансардные окна на любой вкус</a></li>
+								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>Комплектуюшие</a></li>
 							</ul>
 						</div>
 						<div class="catalog-list__block">
@@ -479,19 +304,14 @@
 								<div class="catalog-list__name">Ограждения</div>
 							</div>
 							<ul class="catalog-list__list">
-								<li class="catalog-list__item">	Профнастил</li>
-								<li class="catalog-list__item">Металлический штакетник</li>
-								<li class="catalog-list__item">Комплектующие</li>
+								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>	Профнастил</a></li>
+								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>Металлический штакетник</a></li>
+								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>Комплектующие</a></li>
 							</ul>
 						</div>
 
 					</div>
-					<div class="catalog-list__detail catalog-section">
-
-					</div>
-
-
-					<div class="catalog-list__row catalog-list__row">
+					<div class="catalog-list__row catalog-list__row_width">
 						<div class="catalog-list__block">
 							<div class="catalog-list__status">
 								<svg>
@@ -507,13 +327,10 @@
 								<div class="catalog-list__name">Кровельные аксессуары</div>
 							</div>
 							<ul class="catalog-list__list">
-								<li class="catalog-list__item">Вентиляция</li>
-								<li class="catalog-list__item">Элементы безопасности кровли</li>
+								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>Вентиляция</a></li>
+								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>Элементы безопасности кровли</a></li>
 							</ul>
 						</div>
-					</div>
-					<div class="catalog-list__detail catalog-section">
-
 					</div>
 				</div>
 			</div>
