Инициализация в свежей ветке

--- a/fineroof/app/index.html
+++ b/fineroof/app/index.html
@@ -19,7 +19,7 @@
 	<script defer src='/template/libs/anime.min.js'></script>
 </head>
 
-<body>
+<body class="animated">
 	<header class="header">
 		<div class="header__top">
 			<div class="container">
