--- a/fineroof/app/products3.html
+++ b/fineroof/app/products3.html
@@ -360,6 +360,55 @@
 				</div>
 			</div>
 		</div>
+		<div class="content-block">
+			<div class="container container-inner container-inner_min">
+				<p>
+					Фасадные панели BURG имеют особый стиль, но при этом сочетают в себе нотки строгости и даже брутальности.
+						Это цокольный сайдинг, который произведен в варианте имитации под камень. Внешний дизайн плитки повторяет вручную
+						отесанный материал, что сегодня в тренде фасадных отделочных работ.
+
+				</p>
+			</div>
+		</div>
+
+		<div class="props-table">
+			<div class="container container-inner container-inner">
+				<div class="props-table__wrap">
+					<div class="props-table__tabs">
+						<div class="props-table__tab jsTab classic-button classic-button_white isActive">Узнать цены</div>
+						<div class="props-table__tab jsTab classic-button classic-button_white">Гарантия</div>
+						<div class="props-table__tab jsTab classic-button classic-button_white">Сертификаты</div>
+						<div class="props-table__tab jsTab classic-button classic-button_white">Преимущества</div>
+					</div>
+					<div class="props-table__body">
+						<div class="props-table__list price-tab">
+							<div class="price-tab__title inner-title">
+								Узнать цены
+							</div>
+							<div class="price-tab__wrap">
+								<a href="#" target="_blank" class="price-tab__item">
+									<img src="/template/img/pricelist.png" alt="">
+									<span class="price-tab__name">
+										<span>Скачать</span>
+										<span>прайс</span>
+									</span>
+								</a>
+								<a href="#" target="_blank" class="price-tab__item">
+									<img src="/template/img/pricelist.png" alt="">
+									<span class="price-tab__name">
+										<span>Скачать</span>
+										<span>скидочный купон</span>
+									</span>
+								</a>
+							</div>
+						</div>
+						<div class="props-table__list"></div>
+						<div class="props-table__list"></div>
+						<div class="props-table__list"></div>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="actions">
 			<div class="container">
 				<div class="actions__wrap">
