--- a/fineroof/app/products.html
+++ b/fineroof/app/products.html
@@ -603,6 +603,7 @@
 	<script src="/template/js/script.js"></script>
 	<script defer src='/template/js/svg-animate.js'></script>
 	<script defer src='/template/js/utils.js'></script>
+	<script defer src='/template/js/catalog.js'></script>
 	<!-- <script src="/template/js/vivus.min.js"></script> -->
 </body>
 
