--- a/fineroof/app/products3.html
+++ b/fineroof/app/products3.html
@@ -594,6 +594,53 @@
 				</div>
 			</div>
 		</div>
+		<div class="items-block">
+			<div class="container container-inner">
+				<div class="inner-subtitle inner-subtitle_margin-bottom">С этим товаром покупают</div>
+				<div class="items-block__wrap container-inner container-inner_min">
+					<div class="slider-small-arrows">
+							<div class="slider-control slider-left slider-left_similar">
+							</div>
+							<div class="slider-control slider-right slider-right_similar" >
+							</div>
+					</div>
+					<div class="items-block__slider swiper-container">
+						<div class="items-block__wrapper swiper-wrapper">
+							<a href="#" class="items-block__item small-item bordered-item swiper-slide">
+								<span class="small-item__img">
+									<img src="/template/img/card1.jpg" alt="Замок">
+								</span>
+								<span class="small-item__text">Замок</span>
+							</a>
+							<a href="#" class="items-block__item small-item bordered-item swiper-slide">
+								<span class="small-item__img">
+									<img src="/template/img/card1.jpg" alt="Замок">
+								</span>
+								<span class="small-item__text">Замок</span>
+							</a>
+							<a href="#" class="items-block__item small-item bordered-item swiper-slide">
+								<span class="small-item__img">
+									<img src="/template/img/card1.jpg" alt="Замок">
+								</span>
+								<span class="small-item__text">Замок</span>
+							</a>
+							<a href="#" class="items-block__item small-item bordered-item swiper-slide">
+								<span class="small-item__img">
+									<img src="/template/img/card1.jpg" alt="Замок">
+								</span>
+								<span class="small-item__text">Замок</span>
+							</a>
+							<a href="#" class="items-block__item small-item bordered-item swiper-slide">
+								<span class="small-item__img">
+									<img src="/template/img/card1.jpg" alt="Замок">
+								</span>
+								<span class="small-item__text">Замок</span>
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="actions">
 			<div class="container">
 				<div class="actions__wrap">
